Improve local development instuctions in README

--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,11 @@ DB_USER=username
 DB_PASSWORD=password
 DB_NAME=database
 
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=5432
 DB_SCHEMA=public
 
-
-# Database configuration for PostgreSQL
+# Database configuration for PostgreSQL Docker container. Should be the same as one for the backend above.
 POSTGRES_USER=username
 POSTGRES_PASSWORD=password
 POSTGRES_DB=database
