--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,3 +11,5 @@ services:
       test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"]
       interval: 3s
       start_period: 30s
+    volumes:
+      - ./db:/var/lib/postgresql/data
