--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,5 @@
+# Url for the backend API
 VITE_DB_ADDRESS=http://localhost:8000/api
+
+# Url for the backend Websocket
 VITE_WEBSOCKET_ADDRESS=ws://localhost:5555/board/
