--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,12 +12,15 @@ services:
       start_period: 30s
     volumes:
       - ./db:/var/lib/postgresql/data
+
   frontend:
     build: ./frontend
     command: "npm run dev -- --host"
     restart: "no"
     ports:
       - "5173:5173"
+    env_file:
+      - ./frontend/.env
     develop:
       watch:
         - action: sync
@@ -25,14 +28,19 @@ services:
           target: /app
           ignore:
             - ./frontend/node_modules/
+            - ./frontend/.env
         - action: rebuild
           path: ./frontend/package.json
+    depends_on:
+      - backend
+
   backend:
     build: ./backend
-    command: sh -c "python manage.py runserver 0.0.0.0:8000 & daphne -b 0.0.0.0 -p 5555 backend.asgi:application"
+    command: sh -c "python manage.py migrate & python manage.py runserver 0.0.0.0:8000 & daphne -b 0.0.0.0 -p 5555 backend.asgi:application"
     restart: "no"
     env_file:
       - .env
+      - .env.docker
     ports:
       - "5555:5555"
       - "8000:8000"
@@ -41,6 +49,9 @@ services:
         - action: sync
           path: ./backend
           target: /app
+          ignore:
+            - .env
+            - ./backend/.venv/
         - action: rebuild
           path: ./backend/requirements.txt
     depends_on:
