--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,11 +43,13 @@
     "@vitejs/plugin-react-swc": "^3.3.2",
     "cypress": "^13.6.6",
     "eslint": "^8.45.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-unicorn": "^50.0.1",
+    "prettier": "3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
