--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -2,6 +2,6 @@
   "trailingComma": "none",
   "tabWidth": 2,
   "semi": false,
-  "singleQuote": true,
+  "singleQuote": false,
   "printWidth": 120
 }
