--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-unicorn": "^50.0.1",
     "prettier": "3.3.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
