--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -22,5 +22,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Test with pytest
-        run: pytest
+      - name: Run Ruff lint check
+        run: ruff check
+      - name: Run Ruff style checkout
+        run: ruff format --check
