--- a/.github/workflows/Prettier.yml
+++ b/.github/workflows/Prettier.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./frontend
     steps:
       - uses: actions/checkout@v2
 
@@ -18,7 +21,7 @@ jobs:
           node-version: "20"
 
       - name: Install dependencies
-        run: cd frontend && npm ci
+        run: npm ci
 
       - name: Run Prettier
-        run: cd frontend && npm run prettier
+        run: npm run prettier
