--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -3,9 +3,12 @@ name: Python application test with pytest
 on:
   push:
     branches: [main, development]
+    paths:
+      - "backend/**"
   pull_request:
     branches: [main, development]
-
+    paths:
+      - "backend/**"
 jobs:
   build:
     runs-on: ubuntu-latest
