--- a/.github/workflows/Prettier.yml
+++ b/.github/workflows/Prettier.yml
@@ -3,8 +3,12 @@ name: Prettier style check
 on:
   push:
     branches: [main, development]
+    paths:
+      - "frontend/**"
   pull_request:
     branches: [main, development]
+    paths:
+      - "frontend/**"
 
 jobs:
   cypress-run:
