--- a/.github/workflows/deploy_frontend_dev.yml
+++ b/.github/workflows/deploy_frontend_dev.yml
@@ -4,17 +4,16 @@ on:
   push:
     branches:
       - development
-  pull_request:
-    types: [opened, synchronize, reopened, closed]
-    branches:
-      - development
+    paths:
+      - "frontend/**"
+  workflow_dispatch:
+
 env:
   VITE_DB_ADDRESS: https://futuboardbackenddev.azurewebsites.net/api/
   VITE_WEBSOCKET_ADDRESS: wss://futuboardbackenddev.azurewebsites.net/board/
 
 jobs:
   build_and_deploy_job:
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-latest
     name: Build and Deploy Job
     steps:
@@ -33,16 +32,3 @@ jobs:
           # For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
           app_location: "/frontend" # App source code path
           output_location: "dist" # Built app content directory - optional
-
-  close_pull_request_job:
-    if: github.event_name == 'pull_request' && github.event.action == 'closed'
-    runs-on: ubuntu-latest
-    name: Close Pull Request Job
-    steps:
-      - name: Close Pull Request
-        id: closepullrequest
-        uses: Azure/static-web-apps-deploy@v1
-        with:
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_ASHY_SEA_0C7C52603 }}
-          app_location: "/frontend"
-          action: "close"
