Update docker configuration

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,9 @@
 FROM python:3.12
+RUN useradd -ms /bin/sh -u 1001 app
+USER app
 
 WORKDIR /app
-COPY requirements.txt ./
+COPY --chown=app:app requirements.txt ./
 
 RUN pip install -r requirements.txt
 
