--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,7 @@
 FROM python:3.12
-RUN useradd -ms /bin/sh -u 1001 app
-USER app
 
 WORKDIR /app
-COPY --chown=app:app requirements.txt ./
+COPY requirements.txt ./
 
 RUN pip install -r requirements.txt
 
