Combine tests to one file. Add per-test retries.

--- a/.github/workflows/E2E.yml
+++ b/.github/workflows/E2E.yml
@@ -29,14 +29,4 @@ jobs:
         run: npm start &
 
       - name: Run Cypress tests
-        run: |
-          n=0
-          maxRetries=2
-          until [ $n -ge $maxRetries ]
-          do
-            npx cypress run --browser chrome --spec "cypress/e2e/spec.cy.js" && break
-            n=$[$n+1]
-            echo "Retry $n/$maxRetries"
-            sleep 5
-          done
-        continue-on-error: true
+        run: npx cypress run --browser chrome
