Refactor and improve E2E tests

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,5 @@
 # Url for the backend API
-VITE_DB_ADDRESS=http://localhost:8000/api
+VITE_DB_ADDRESS=http://localhost:8000/api/
 
 # Url for the backend Websocket
 VITE_WEBSOCKET_ADDRESS=ws://localhost:8000/board/
