Rename Github actions

--- a/.github/workflows/lint_Eslint.yml
+++ b/.github/workflows/lint_Eslint.yml
@@ -5,7 +5,7 @@ on:
     branches: [main, development]
 
 jobs:
-  cypress-run:
+  eslint-lint-check:
     runs-on: ubuntu-latest
     defaults:
       run:
