--- a/.github/workflows/lint_Ruff.yml
+++ b/.github/workflows/lint_Ruff.yml
@@ -1,4 +1,4 @@
-name: Python application test with pytest
+name: Python lint and style check with Ruff
 
 on:
   pull_request:
@@ -6,11 +6,8 @@ on:
     paths:
       - "backend/**"
 
-env:
-  JWT_SECRET: secret
-
 jobs:
-  build:
+  ruff-lint-and-style-check:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -25,5 +22,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Test with pytest
-        run: pytest
+      - name: Run Ruff lint check
+        run: ruff check
+      - name: Run Ruff style checkout
+        run: ruff format --check
