--- a/.github/workflows/test_unit_pytest.yml
+++ b/.github/workflows/test_unit_pytest.yml
@@ -1,4 +1,4 @@
-name: Python lint and style check with Ruff
+name: Python unit tests with pytest
 
 on:
   pull_request:
@@ -6,8 +6,11 @@ on:
     paths:
       - "backend/**"
 
+env:
+  JWT_SECRET: secret
+
 jobs:
-  build:
+  pytest-unit-tests:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -22,7 +25,5 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Run Ruff lint check
-        run: ruff check
-      - name: Run Ruff style checkout
-        run: ruff format --check
+      - name: Test with pytest
+        run: pytest
