--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -21,5 +21,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: Copy .env file
+        run: cp .env.example .env
       - name: Test with pytest
         run: pytest
