--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -5,6 +5,10 @@ on:
     branches: [main, development]
     paths:
       - "backend/**"
+
+env:
+  JWT_SECRET: secret
+
 jobs:
   build:
     runs-on: ubuntu-latest
