Update .env.example to fix Cypress bug

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,7 @@
 # Url for the backend API
-VITE_DB_ADDRESS=http://localhost:8000/api/
+VITE_DB_ADDRESS=http://127.0.0.1:8000/api/
 
 # Url for the backend Websocket
-VITE_WEBSOCKET_ADDRESS=ws://localhost:8000/board/
+VITE_WEBSOCKET_ADDRESS=ws://127.0.0.1:8000/board/
+
+# Both addresses are 127.0.0.1 instead of localhost, because bug with Cypress https://github.com/cypress-io/cypress/issues/26154
