--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hello-pangea/dnd": "^16.5.0",
+    "@mdxeditor/editor": "^3.20.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.18",
     "@reduxjs/toolkit": "^1.9.7",
