--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@hello-pangea/dnd": "^16.5.0",
-    "@mdxeditor/editor": "^3.21.2",
+    "@mdxeditor/editor": "3.20.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.18",
     "@reduxjs/toolkit": "^1.9.7",
