--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@hello-pangea/dnd": "^16.5.0",
-    "@mdxeditor/editor": "3.20.0",
+    "@mdxeditor/editor": "^3.21.4",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.18",
     "@reduxjs/toolkit": "^1.9.7",
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.48.2",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.19.0",
+    "recharts": "^2.15.1",
     "socket.io-client": "^4.7.4",
     "uuid": "^9.0.1"
   },
