--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,13 +16,16 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hello-pangea/dnd": "^16.5.0",
-    "@mdxeditor/editor": "3.20.0",
+    "@mdxeditor/editor": "^3.21.4",
     "@mui/icons-material": "^5.14.19",
-    "@mui/material": "^5.14.18",
+    "@mui/material": "^5.16.14",
+    "@mui/x-date-pickers": "^7.27.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/uuid": "^9.0.7",
+    "dayjs": "^1.11.13",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dnd": "^16.0.1",
@@ -31,6 +34,7 @@
     "react-hook-form": "^7.48.2",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.19.0",
+    "recharts": "^2.15.1",
     "socket.io-client": "^4.7.4",
     "uuid": "^9.0.1"
   },
