--- a/.github/workflows/test_E2E_Cypress.yml
+++ b/.github/workflows/test_E2E_Cypress.yml
@@ -24,9 +24,9 @@ jobs:
 
       - name: Start containers
         run: docker compose up -d --wait
-      
+
       - name: Run Cypress tests
-        run: cd cypress && npm ci &&  npm test
+        run: cd cypress && npm install &&  npm test
 
       - name: Stop containers
         run: docker compose down
